--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ section {
 
 .logo {
     flex: 1 1 calc(25% - 20px); /* Two logos per row, with a 20px gap between them */
-    max-width: calc(50% - 20px); /* Ensure the logos take up 50% of the container width */
+    max-width: 200px; /* Ensure the logos take up 50% of the container width */
     height: 150px; /* All logos will have a consistent height */
     display: flex;
     justify-content: center;
