--- a/style.css
+++ b/style.css
@@ -301,13 +301,17 @@ nav ul li a:hover {
     align-items: flex-start;
     gap: 20px; /* Espace entre les éléments */
 }
+
+/* Texte des topics */
+.topics-text {
+    flex: 1;
+    font-size: 16px; /* Taille de texte ajustée pour les petits écrans */
+    line-height: 1.8;
+}
 .  topic-number {
     color: #4C9983; /* Vert */
     font-weight: bold; /* Optionnel pour plus de mise en valeur */
 }
-/* Texte des topics */
-
-
 /* Image des topics */
 .topics-image {
     flex: 0.9;
