--- a/style.css
+++ b/style.css
@@ -308,9 +308,11 @@ nav ul li a:hover {
     font-size: 16px; /* Taille de texte ajustée pour les petits écrans */
     line-height: 1.8;
 }
-.  topic-number {
-    color: #4C9983; /* Vert */
-    font-weight: bold; /* Optionnel pour plus de mise en valeur */
+.topic-number {
+    color: #4C9983; /* Green color for numbers */
+    font-weight: bold; /* Bold for better emphasis */
+    margin-right: 5px; /* Add spacing after the number */
+    font-size: 1.1em; /* Slightly larger font size for emphasis */
 }
 /* Image des topics */
 .topics-image {
