--- a/style.css
+++ b/style.css
@@ -314,6 +314,9 @@ nav ul li a:hover {
     margin-right: 5px; /* Add spacing after the number */
     font-size: 1.1em; /* Slightly larger font size for emphasis */
 }
+p .topic-number {
+    color: #4C9983 !important; /* Use !important as a last resort */
+}
 /* Image des topics */
 .topics-image {
     flex: 0.9;
