--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 30px;
 }
 
 /* Logo Styling */
