--- a/style.css
+++ b/style.css
@@ -66,9 +66,10 @@ section {
     }
 
     .letter {
-        font-size: 0.9rem; /* Réduit la taille de la première lettre pour les petits écrans */
+        font-size: 1em; /* Réduit la taille de la première lettre pour les petits écrans */
     }
     .ml-1 {
+        font-size: 15px;
         margin-left: 0.05rem; /* Ajustement de la marge pour les très petits écrans */
     }
 }
