--- a/style.css
+++ b/style.css
@@ -541,7 +541,7 @@ h3 {
             border-radius: 8px;
             border-left: 6px solid #006E4E;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
+            font-size: 12px;line-height: 0.8;letter-spacing: 0.141em;font-weight: 400;
             /*font-size: 13px;font-weight: 400;line-height: 1.1;letter-spacing: 0.024em;*/
         }
 
