--- a/style.css
+++ b/style.css
@@ -579,7 +579,16 @@ form {
   background-color: #f9f9f9;
   font-family: Arial, sans-serif;
 }
+@media (max-width: 480px) {
+form {
+  max-width: 85%;
+  margin: 20px 20px 20px;
+  padding: 22px;
+  border: 2px solid #ddd;
+  border-radius: 10px;
 
+}
+}
 /* Style pour les étiquettes */
 form label {
   display: block;
@@ -593,10 +602,10 @@ form input[type="text"],
 form input[type="email"],
 form input[type="tel"],
 form input[type="file"] {
-  width: 100%;
+  width: 250px;
   padding: 15px;
   margin-bottom: 20px;
-  border: 1px solid #006E4E;
+  border: 2px solid #006E4E;
   border-radius: 15px;
   box-sizing: border-box;
   font-size: 14px;
