--- a/style.css
+++ b/style.css
@@ -582,8 +582,8 @@ form {
 @media (max-width: 480px) {
 form {
   max-width: 85%;
-  margin: 20px 20px 20px;
-  padding: 22px;
+  margin: 3px 5px;
+  padding: 12px;
   border: 2px solid #ddd;
   border-radius: 10px;
 
