--- a/style.css
+++ b/style.css
@@ -588,6 +588,19 @@ form {
   border-radius: 10px;
 
 }
+    form input[type="text"],
+form input[type="email"],
+form input[type="tel"],
+form input[type="file"] {
+  width: 320px;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 2px solid #006E4E;
+  border-radius: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  background-color: #fff;
+}
 }
 /* Style pour les étiquettes */
 form label {
@@ -602,7 +615,7 @@ form input[type="text"],
 form input[type="email"],
 form input[type="tel"],
 form input[type="file"] {
-  width: 250px;
+  width: 700px;
   padding: 15px;
   margin-bottom: 20px;
   border: 2px solid #006E4E;
