--- a/style.css
+++ b/style.css
@@ -628,8 +628,22 @@ form {
     background-color: #fff;
   }
 }
-
-
+@media (max-width: 768px) {
+form input[type="text"], form input[type="email"], form input[type="tel"], form input[type="file"] {
+  width: 600px;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 2px solid #006E4E;
+    border-top-color: rgb(0, 110, 78);
+    border-right-color: rgb(0, 110, 78);
+    border-bottom-color: rgb(0, 110, 78);
+    border-left-color: rgb(0, 110, 78);
+  border-radius: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  background-color: #fff;
+}
+}
 /* Champs focus */
 form input:focus {
   border-color: #006E4E;
