--- a/style.css
+++ b/style.css
@@ -628,6 +628,26 @@ form {
     background-color: #fff;
   }
 }
+@media (max-width: 915px) {
+  form input[type="text"], form input[type="email"], form input[type="tel"], form input[type="file"] {
+    width: 260px;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 2px solid #006E4E;
+    border-top-color: rgb(0, 110, 78);
+    border-right-color: rgb(0, 110, 78);
+    border-bottom-color: rgb(0, 110, 78);
+    border-left-color: rgb(0, 110, 78);
+    border-top-color: rgb(0, 110, 78);
+    border-right-color: rgb(0, 110, 78);
+    border-bottom-color: rgb(0, 110, 78);
+    border-left-color: rgb(0, 110, 78);
+    border-radius: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+    background-color: #fff;
+  }
+}
 @media (max-width: 1080px) {
 
     form {
