--- a/style.css
+++ b/style.css
@@ -659,7 +659,9 @@ form {
 
 }
     form input[type="text"], form input[type="email"], form input[type="tel"], form input[type="file"] {
-  width: 600px;
+
+  width: 100%; /* Prend toute la largeur disponible */
+  max-width: 260px;
   padding: 15px;
   margin-bottom: 20px;
   border: 2px solid #006E4E;
