--- a/style.css
+++ b/style.css
@@ -614,9 +614,9 @@ form {
 }
 @media (max-width: 480px) {
   form input[type="text"], form input[type="email"], form input[type="tel"], form input[type="file"] {
-    width: 270px;
-    padding: 15px;
-    margin-bottom: 20px;
+    width: 100%; /* Prend toute la largeur du conteneur */
+    max-width: 300px;
+    margin-bottom: 12px;
     border: 2px solid #006E4E;
     border-top-color: rgb(0, 110, 78);
     border-right-color: rgb(0, 110, 78);
