--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@ form {
     form input[type="text"], form input[type="email"], form input[type="tel"], form input[type="file"] {
 
   width: 100%; /* Prend toute la largeur disponible */
-  max-width: 1200px;
+  max-width: revert-layer;
   padding: 15px;
   margin-bottom: 20px;
   border: 2px solid #006E4E;
