--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ header {
     justify-content: space-between;
     height: 30px;
 }
+.logo-container {
+  flex-shrink: 0; /* Prevents shrinking of the logo container */
+
+}
+.logo {
+  height: 100px; /* Adjust height to fit in the nav */
+  width: auto;  /* Maintain aspect ratio */
+
+}
 
 /* Logo Styling */
 section {
